# p1-dsmr-http-server

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  activate-env  gitlab-ci.yml  makefile  prj.conf  requirements.txt  sysbuild.conf  west.yml
.gitlab/issue_templates/: bug-report.md  feature-request.md
.west/: config
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: esp32_devkitc_wroom_esp32_procpu.conf  esp32_devkitc_wroom_esp32_procpu.overlay  nrf54l15pdk_nrf54l15_cpuapp.conf  nrf54l15pdk_nrf54l15_cpuapp.overlay  rpi_pico.overlay
app/modules/dsmr_p1/: CMakeLists.txt  Kconfig  dsmr_p1.c
app/modules/dsmr_p1/include/: dsmr_p1.h
app/modules/dsmr_p1/include/dsmr_p1/: dsmr_p1.h  platform.h
app/modules/dsmr_p1/src/: dsmr_p1.c
app/modules/dsmr_p1/src/zephyr/: platform.c
app/src/: main.c
boards/: esp32_devkitc_esp32_procpu.overlay  esp32s3_devkitc_esp32s3_procpu.conf  esp32s3_devkitc_esp32s3_procpu.overlay  frdm_rw612.conf  frdm_rw612.overlay  nrf54l15pdk_nrf54l15_cpuapp.overlay
modules/dsmr_p1/: CMakeLists.txt  Kconfig
modules/dsmr_p1/include/dsmr_p1/: dsmr_p1.h  platform.h
modules/dsmr_p1/src/: dsmr_p1.c  obis.h
modules/dsmr_p1/src/zephyr/: platform.c
modules/sysbuild/: CMakeLists.txt  Kconfig
scripts/: west-commands.yml
scripts/west_commands/: format.py
socs/: esp32_procpu.overlay
src/: http.c  http.h  main.c  server.c  server.h
src/http/: encoder.c  encoder.h  server.c  server.h
src/tcp/: server.c  server.h
src/web/: index.html  main.js
zephyr/: module.yml
